[feat] Styling about page for mobile and tablet

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -134,6 +134,9 @@
         display: block !important;
     }
     
+    main .introduce-us .wrapper .upper-box .gallery {
+        width: calc(50% - 10px); 
+    }
 
     footer {
         padding: 20px 20px;
