--- a/css/mobile.css
+++ b/css/mobile.css
@@ -79,10 +79,8 @@
         gap: 10px;
     }
 
-    main .shop-section-outdoor {
-        .outdoor-container {
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-        }
+    main .shop-section-outdoor .outdoor-container{
+        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     }
     
     main .shop-section-outdoor .wrapper .outdoor-container p{
