--- a/css/desktop.css
+++ b/css/desktop.css
@@ -287,15 +287,14 @@ main {
                         .shop-button {
                             display: flex;
                             align-items: center;
-
                             margin-top: 20px;
-
                             padding: 10px 40px;
                             border-radius: 50%;
                             background: var(--light-purple);
 
                             a {
-
+                                font-size: 20px;
+                                font-weight: bold;
                                 &:link,
                                 &:visited {
                                     color: #0f0682;
